[gd_scene load_steps=17 format=3 uid="uid://dsetycerax1g"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_ftpxy"]
[ext_resource type="Shader" path="res://data/blurr_canvas.gdshader" id="1_ijklf"]
[ext_resource type="Shader" path="res://data/plexus.gdshader" id="1_ucxoo"]
[ext_resource type="Theme" uid="uid://ddimtgpnd4gip" path="res://data/Button_Theme_01.tres" id="2_j41nc"]
[ext_resource type="FontFile" uid="uid://dbli7jexs0nak" path="res://assets/ui/GelatinTTFCAPS.ttf" id="3_6a0q2"]
[ext_resource type="Texture2D" uid="uid://bcqrm5veen3i6" path="res://assets/textures/Abstract_Noise_021-512x512.png" id="3_waerq"]
[ext_resource type="PackedScene" uid="uid://cbkickc83pnb3" path="res://scenes/fade_screen.tscn" id="7_7thqs"]
[ext_resource type="AudioStream" uid="uid://c0iul1gcvfx5o" path="res://assets/sounds/game_over.wav" id="8_pnd66"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ek1i"]
shader = ExtResource("1_ijklf")
shader_parameter/lod = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hr7du"]
shader = ExtResource("1_ucxoo")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/line_color = Color(0.101961, 0.4, 0.992157, 1)
shader_parameter/octaves = 20
shader_parameter/zoom_factor = 10.0
shader_parameter/zoom_coef = 1.1
shader_parameter/brightness = 10.0
shader_parameter/rotation_angle = 0.5
shader_parameter/alpha_threshold = 0.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pyegb"]
texture = ExtResource("3_waerq")
modulate_color = Color(0.333333, 0.337255, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vce23"]
texture = ExtResource("3_waerq")
modulate_color = Color(0.87451, 0.337255, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ey8yt"]
texture = ExtResource("3_waerq")
modulate_color = Color(0.87451, 0.211765, 0.403922, 1)

[sub_resource type="Animation" id="Animation_bpbq2"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_oq0i3"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.82, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s8x3c"]
_data = {
"RESET": SubResource("Animation_bpbq2"),
"blur": SubResource("Animation_oq0i3")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ftpxy")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_1ek1i")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_hr7du")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.0
offset_top = -382.0
offset_right = 326.0
offset_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="game_over_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6a0q2")
theme_override_font_sizes/font_size = 100
text = "GAME OVER"
horizontal_alignment = 1

[node name="resume_bttn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_j41nc")
theme_override_fonts/font = ExtResource("3_6a0q2")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_pyegb")
theme_override_styles/hover = SubResource("StyleBoxTexture_vce23")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ey8yt")
text = "Resume"

[node name="restart_bttn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_j41nc")
theme_override_fonts/font = ExtResource("3_6a0q2")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_pyegb")
theme_override_styles/hover = SubResource("StyleBoxTexture_vce23")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ey8yt")
text = "Restart"

[node name="start_menu_bttn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_j41nc")
theme_override_fonts/font = ExtResource("3_6a0q2")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_pyegb")
theme_override_styles/hover = SubResource("StyleBoxTexture_vce23")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ey8yt")
text = "Return to Main Menu"

[node name="quit_bttn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_j41nc")
theme_override_fonts/font = ExtResource("3_6a0q2")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_pyegb")
theme_override_styles/hover = SubResource("StyleBoxTexture_vce23")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ey8yt")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s8x3c")
}

[node name="fade_screen" parent="." instance=ExtResource("7_7thqs")]
layer = 5

[node name="quit_audio_stream_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pnd66")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/resume_bttn" to="." method="_on_resume_bttn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/restart_bttn" to="." method="_on_restart_bttn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/start_menu_bttn" to="." method="_on_start_menu_bttn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/quit_bttn" to="." method="_on_quit_bttn_pressed"]
